@@ -1,8 +1,8 @@
 package xyz.snaker.natives;
 
+import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import xyz.snaker.snkr4j.SimpleLogger;
 import xyz.snaker.snkr4j.SnakerLogger;
@@ -29,7 +29,20 @@ public class SnakerNatives
         }
 
         try {
-            Path path = Paths.get(resource.toURI()).toAbsolutePath();
+            Path path = Path.of(resource.toURI());
+
+            if (!path.isAbsolute()) {
+                path = path.toAbsolutePath();
+            }
+
+            if (!path.isAbsolute()) {
+                path = Path.of(path.toAbsolutePath().toString()).toAbsolutePath();
+            }
+
+            if (!path.isAbsolute()) {
+                throw new IOException("Could not make path absolute: %s".formatted(path));
+            }
+
             System.load(path.toString());
         } catch (Exception e) {
             LOGGER.errorf("Could not load libraries for SnakerNatives: []", e.getMessage());
@@ -37,6 +50,11 @@ public class SnakerNatives
         }
 
         LOGGER.infof("Loaded native libraries for SnakerNatives");
+    }
+
+    public static void main(String[] args)
+    {
+
     }
 
     /**
